<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="36dp"
    tools:context=".presentation.addtodo.AddTodoBottomSheet">

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_medium_priority"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_medium_priority"
        android:button="@null"
        android:gravity="center"
        android:text="@string/medium"
        android:textColor="@color/green"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_set_todo"
        app:layout_constraintEnd_toStartOf="@+id/rb_high_priority"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rb_low_priority"
        app:layout_constraintTop_toBottomOf="@+id/img_select_image" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_low_priority"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_low_priority"
        android:button="@null"
        android:gravity="center"
        android:text="@string/low"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rb_medium_priority"
        app:layout_constraintEnd_toStartOf="@+id/rb_medium_priority"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rb_medium_priority" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_high_priority"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_high_priority"
        android:button="@null"
        android:gravity="center"
        android:text="@string/high"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rb_medium_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rb_medium_priority"
        app:layout_constraintTop_toTopOf="@+id/rb_medium_priority" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_todo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/add_todo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_set_todo"
        app:layout_constraintTop_toTopOf="@+id/btn_set_todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_todo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/img_select_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_todo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/set_todo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_todo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_medium_priority" />

    <ImageView
        android:id="@+id/img_select_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/rb_medium_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_todo"
        app:srcCompat="@drawable/ic_add_image" />

</androidx.constraintlayout.widget.ConstraintLayout>